Card Maker Version History
--------------------------
0.99.3.0
- Added JavaScript Translation functionality (this is optional/experimental)
- Added ![cardindex] and ![deckindex] as card values (usable in the element definition)
- Resolved issue with FormattedText bottom aligned containing images in the last row (quite specific!)
- Added basic alignment tools to the Canvas

0.99.2.0
- First open source release (and a massive code refactor)
- Removed Printing
- Removed Preview Dialog
- Added rendered message if no layout is selected in the Project window
- Changed Layout Template storage to create individual files (easy sharing/backup)
- Added translate functionality to overrides (should match definition translation functionality)
- Critical -- Fixed the issue with the font size not matching when an outline is specifed (previously it was much smaller)
-- This means your previous projects that used outline+text may need to be revisited for font size if you used outline
- Fixed Bottom aligned FormattedText elements (they were being cut off in most cases)
- Added option/ability to cache Google Spreadsheet data locally

0.99.1.10
- Fix for Text elements using the line spacing value (only supposed to apply to FormattedText)
- Fix for image export at the project level resulting in (bad) different output than individually exporting a layout
- Added error handling to PDF export (should avoid crashing on export if the PDF is open)
- Added a bit more logic around Google token expiration (OAUTH2 has limited options for desktop applications)

0.99.1.9
- Fix for end of row PDF export issue resulting in overlapping layouts on the page.
- Added rotation export functionality to the PDF export (uses the export settings for now)
- Added Print Layouts on New Page option (applies to printing and PDF Export)
- Added ability to import layout objects from other project files

0.99.1.8
- Resolved issue with different decimal types (comma/period) stored in the main ini file